# avid-c24-driver

./: CMakeLists.txt  README.md  meson.build
src/: c24_controls.c  c24_controls.h  c24_error.c  c24_error.h  c24_frame.c  c24_frame.h  c24_handshake.c  c24_handshake.h  c24_protocol.h  c24_request.c  c24_request.h  c24_surface.c  c24_surface.h  c24_surface_manager.c  c24_surface_manager.h  c24_surface_private_definitions.h  c24_vu_meter_mask_request.c  c24_vu_meter_mask_request.h  exemple.c  log.h  meson.build  network.c  network.h  queue.c  queue.h  utility.c  utility.h
